src/css/covers.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

/* .covers {
    position: relative;
    margin: 0;
    min-height: 100vh;
    overflow: hidden;
    height: 100%;
    max-height: 508px;
    margin: 0 auto;
} */

.covers-container{
    position: relative;
        margin: 0;
        min-height: 100vh;
        overflow: hidden;
        height: 100%;
        max-height: 508px;
        margin: 0 auto;
}

@media (min-width: 768px){
    .covers{
        max-height: 960px;
    }
}

.cover-pic {
    position: relative;
    right: auto;
    left: auto;
    text-align: center;
    font-family: "Pridi", sans-serif;
    font-weight: 600;
    font-size: 20px;
    text-transform: uppercase;
}

.cover-line {
    height: auto;
    display: flex;
    transform: rotate(16deg);
    flex-direction: column;
    gap: 40px;
    margin-bottom: 20px;
}

.cover-list {
    display: flex;
    list-style: none;
    gap: 20px;
    transform: translateY(-75%);
    z-index: 1;
}

.cover-list-item {
    background-color: rgb(217, 217, 217, 0.04);
    flex-shrink: 0;
    display: flex;
    justify-content: center;
    width: calc(72.5%);
    white-space: nowrap;
    animation-name: marqueeLine;
    animation-duration: 10s;
    animation-timing-function: ease-in-out;
    animation-iteration-count: infinite;

}

.covers-ellipse-wrap {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    pointer-events: none;
}

.covers-ellipse{
    position: absolute;
    background-image: url(../img/covers/ellipse-03.png);
    width: 350px;
    height: 350px;
    background-color: rgba(198, 227, 39, 1);
    filter: blur(50px);
    z-index: 0;
}

.covers-ellipse-first {
    display: none;
}

.covers-ellipse-second {
    top: 0;
    left: 50%;
    transform: translateX(-75%);
}

.covers-ellipse-three{
    bottom: 0;
    right: 0;
    transform: translateX(50%);
}

@media (min-width: 768px) {
    /* .covers-ellipse-first {
        display: none;
    } */

    .covers-ellipse-second {
        top: 0;
        transform: translateX(-100%);
    }

.covers-ellipse-three {
    bottom: 0;
    right: 0;
}

    .cover-line {
        margin-bottom: 40px;
    }

    .cover-list {
        gap: 40px;
    }

    .cover-list-item {
        width: calc(68%);
    }
}

@media (min-width: 1440px) {
    .cover-list-item {
        width: calc(34.82%);
    }

    .covers-ellipse-first {
    display: block;
    left: -50px;
    top: 25%;
}

.covers-ellipse-second {
    top: 0;
    left: 50%;
    transform: translateX(-75%);
}

.covers-ellipse-three{
    bottom: 0;
    right: 0;
}
}

@keyframes marqueeLine {
    0% {
        transform: translateX(0);
    }

    100% {
        transform: translateX(-100%);
    }
}

